apps/apicurio/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-registry
  namespace: apicurio
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-url: https://auth.yanatech.co.uk/outpost.goauthentik.io/auth/nginx
    nginx.ingress.kubernetes.io/auth-signin: https://auth.yanatech.co.uk/outpost.goauthentik.io/start?rd=$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: >-
      Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
      proxy_set_header X-Original-URL $scheme://$http_host$request_uri;
spec:
  ingressClassName: nginx
  rules:
    - host: apicurio.yanatech.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apicurio-registry
                port:
                  number: 8080
  tls:
    - hosts:
        - apicurio.yanatech.co.uk
      secretName: wildcard-yanatech-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-outpost
  namespace: authentik
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: apicurio.yanatech.co.uk
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-apicurio
                port:
                  number: 9000
  tls:
    - hosts:
        - apicurio.yanatech.co.uk
      secretName: wildcard-yanatech-tls
