apps/apicurio/manifests/outpost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apicurio-outpost
  namespace: apicurio
spec:
  ingressClassName: nginx
  rules:
    - host: apicurio.yanatech.co.uk
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-apicurio
                port:
                  number: 9000
  tls:
    - secretName: wildcard-yanatech-tls
      hosts:
        - apicurio.yanatech.co.uk
---
apiVersion: v1
kind: Service
metadata:
  name: ak-outpost-apicurio
  namespace: apicurio
spec:
  type: ExternalName
  externalName: ak-outpost-apicurio.authentik.svc.cluster.local
  ports:
    - port: 9000
